1.02 Joachim Schiele, js@lastlog.de   * Main repository moved to: https://github.com/qknight/clean   * Fixed PHP tags   * Fixed broken CSS   * License change from '' to 'cc-by-sa/3.0' on 'Kevin Hughes' request:     This work is licensed under a Creative Commons Attribution-ShareAlike 3.0 Unported License:     http://creativecommons.org/licenses/by-sa/3.0/

--- a/clean/main.css
+++ b/clean/main.css
@@ -927,6 +927,7 @@ span.searchmatch {
         background-color: #EFEFEF;
         padding: 5px;
         padding-left: 7px;
+        display: none;
 }
 
 #catlinks p {
